Make sure Everest Version Lister goes through all GitHub releases pages